--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -94,6 +94,17 @@
         \n\nWhen you make an investment for a future goal, you want your future re-turns to be at par with the going market rates of that time. The inflation rate is calculated based on various fiscal parameters, to ensure that the return on your investment remains relevant in future.
     </string>
     <string name="here_is_a_summary_of_your_goal">Here is a Summary of Your Goal:</string>
+    <string name="weightage">Weightage</string>
+    <string name="one_time">One-Time</string>
+    <string name="monthly">Monthly</string>
+    <string name="my_cart">My Cart</string>
+    <string name="great_job">Great Job!</string>
+    <string name="you_are_almost_there_here_is_a_summary_of_your_order">You are almost there! Here is a summary of your order. Want to invest in more funds? Edit here before investing.</string>
+    <string name="add_funds">Add Funds</string>
+    <string name="order_summary">Order Summary</string>
+    <string name="total_one_time_lumpsum_investment">Total One-time Lumpsum Investment</string>
+    <string name="total_monthly_investment_sip">Total Monthly Investment (SIP)</string>
+    <string name="place_order">Place Order</string>
 
     <string-array name="durations">
         <item>Year(s)</item>
