1: Login screen and its validation completed.  2: Forgot Password screen and its validation completed.  3: Sign Up screen and its validation completed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -125,6 +125,20 @@
     <string name="or">Or</string>
     <string name="login_with">Login with</string>
     <string name="google_plus">Google Plus</string>
+    <string name="facebook">Facebook</string>
+    <string name="don_t_have_an_account_yet_get_started">Don\'t have an account yet? <font color='#4EB95D'>Get Started</font></string>
+    <string name="we_just_need_your_registered_email_id">We just need your registered Email ID to send you password reset instructions.</string>
+    <string name="email_address">Email Address</string>
+    <string name="reset_password">Reset Password</string>
+    <string name="back">Back</string>
+    <string name="sign_up_start_investing">Sign Up. Start Investing.</string>
+    <string name="email_address_star">Email Address*</string>
+    <string name="mobile_number_star">Mobile Number*</string>
+    <string name="password_star">Password*</string>
+    <string name="confirm_password">Confirm Password*</string>
+    <string name="i_agree_with_terms_and_conditions">I agree with <font color='#4EB95D'>Terms and Conditions</font></string>
+    <string name="sign_up">Sign Up</string>
+    <string name="already_have_an_account">Already have an account? <font color='#4EB95D'>Login</font></string>
 
     <string-array name="durations">
         <item>Year(s)</item>
