--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,17 @@
     <string name="i_agree_with_terms_and_conditions">I agree with <font color='#4EB95D'>Terms and Conditions</font></string>
     <string name="sign_up">Sign Up</string>
     <string name="already_have_an_account">Already have an account? <font color='#4EB95D'>Login</font></string>
+    <string name="verify_mobile_number">Verify Mobile Number</string>
+    <string name="otp_has_been_sent_to_you_on_your_mobile_number_please_enter_it_below">OTP has been sent to you on your mobile number. Please enter it below.</string>
+    <string name="not_received_your_otp_resend_otp">Not received your OTP? <font color='#4EB95D'>Resend OTP</font></string>
+    <string name="submit">Submit</string>
+    <string name="enter_otp">Enter OTP</string>
+    <string name="pan_number">PAN Number</string>
+    <string name="date_of_birth">Date of Birth</string>
+    <string name="mobile_number">Mobile Number</string>
+    <string name="my_country_of_tax_residency_is_only_india">My country of tax residency is only India</string>
+    <string name="verify">Verify</string>
+    <string name="verify_your_pan">Verify Your PAN</string>
 
     <string-array name="durations">
         <item>Year(s)</item>
