--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -152,6 +152,7 @@
     <string name="verify_your_pan">Verify Your PAN</string>
     <string name="read_more">Read More</string>
     <string name="volatility_">Volatility (Vol)</string>
+    <string name="share">Share</string>
 
     <string-array name="durations">
         <item>Year(s)</item>
@@ -278,5 +279,19 @@
         <item>Liquid</item>
         <item>Overnight</item>
     </string-array>
+
+
+    <string name="temp_description">
+        Equity markets have been volatile so far this year with Nifty 50 falling about 10% in the Jan-Mar period and recovering swiftly to make new highs. But broader markets are still losing with Nifty Midcap 100 down 10% and BSE Small cap down 13% while Nifty 50 has returned 8.5% in the year to date. So how are foreign institutional investors (FII) and mutual funds playing this market?
+        Flls have been net sellers this year, selling Rs.37,583 crore while mutual funds have made net investments of Rs.69,471 crore. This divergence be-tween Flls and mutual funds is not just in the overall numbers. They differ vastly in their stock picks as well.
+        Larger or smaller companies?
+        With large-caps and small-caps taking different directions, the choice be-tween them has become even tougher. Mutual funds have settled with taking the cautious approach of sticking to quality large-caps. They have, in fact, been pruning their exposure to small-caps. If we look at all funds which can invest across market capitalisations, exposure to mid and small caps has reduced from 36% in January to 30% in June. The share of large-cap stocks has increased from 58% to 63% in the same period. Here, the definition of market cap segments is as per SEBI.
+        In this same period, given that Flls have been heavy sellers, large-cap stocks have seen Flls reduce stake in more stocks and increased stake in just a few. MFs have increased stake in 70 large-cap stocks while they have reduced it in 27 of them. Flls increased stake in just 37 stocks and reduced stake in 62.
+        Even within the limited number of large-cap stocks where Flls increased stake, the choice of stocks differ from MFs. In Asian Paints, for example, Flls now hold 14.7% against a nil holding in January. Mutual funds have just have stayed put with around a 2% stake. Similarly, in Interglobe Avia-tion Flls increased holding by 3 percentage points while mutual funds reduced their holding to the same extent. The same holds true for Adani Ports, where Flls upped stake and mutual funds did the reverse.
+        Sectoral deviation
+        Marketcaps aside, even within sectors, Flls and mutual funds take differ-ent paths.
+        Consider the telecom sector. Mutual funds have upped stake in both Idea Cellular and Bharti Airtel. Flls have not, but instead chosen Tata Communi-cations to hike holding.
+        Flls also seemed to find opportunities in healthcare stocks Fortis Health-care and Dr.Lal Pathlabs where mutual funds decreased. Funds picked up the beleaguered Dr Reddy and Sun Pharma while Flls preferred Divis Labs.
+    </string>
 
 </resources>
