1: App testing and some minor bugs fixes. 2: Api testing and encryption, decryption Algorithm issue fixed.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -294,4 +294,6 @@
         Flls also seemed to find opportunities in healthcare stocks Fortis Health-care and Dr.Lal Pathlabs where mutual funds decreased. Funds picked up the beleaguered Dr Reddy and Sun Pharma while Flls preferred Divis Labs.
     </string>
 
+    <string name="key">S1D$F#q76S458G9h6u5DF7pk5T7Lpart</string>
+
 </resources>
