1 : Add Bank Account screen and Its Validations done.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -336,5 +336,10 @@
     <string name="breach_name">Breach Name</string>
     <string name="ifsc_code">IFSC Code</string>
     <string name="add_new_bank_account">Add New Bank Account</string>
+    <string name="select_bank">Select Bank</string>
+    <string name="icici_bank">ICICI Bank</string>
+    <string name="re_enter_account_number">Re-enter Account Number</string>
+    <string name="account_type">Account Type</string>
+    <string name="add_bank_account">Add Bank Account</string>
 
 </resources>
