--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -342,5 +342,19 @@
     <string name="account_type">Account Type</string>
     <string name="add_bank_account">Add Bank Account</string>
     <string name="max_auto_debit">Maximum auto-debit limit</string>
+    <string name="no_bank_account_added_yet">No Bank Account Added Yet</string>
+    <string name="bank">Bank</string>
+    <string name="successful">Successful!</string>
+    <string name="your_bank_mandate_request_has_been">Your bank mandate request has been submitted to your bank successfully. Your bank may take 10-35 days for the approval.</string>
+    <string name="we_will_inform_you">We\'ll keep you updated about the bank mandate status via email and sms.</string>
+    <string name="bank_mandate_type">Bank Mandate Type</string>
+    <string name="sip_mandate">ISIP Mandate</string>
+    <string name="selft_authorize_to_bank">Self-authorize your bank to auto-invest in SIPs of your choice. Login to your net-banking account online, and self-authorize your bank to auto-invest in SIPs of your choice at pre-determined intervals.</string>
+    <string name="nach_mandate">NACH Mandate</string>
+    <string name="we_provide_easiest_way_to">We provide the easiest way to do the NACH Mandate by generating the pre-filled e-Mandate form for you. You can either sign it digitally within the app or sign manually and upload the scan mandate. It will take 10 to 35 days for the approval but you can choose any maximum mandate limit.</string>
+    <string name="download_mandate_form">Download Mandate Form</string>
+    <string name="download_bank_form_description">Download the bank mandate form and fill out your details to set up Auto- Payments./n/nThis form allows secure auto-debiting of a specified amount of money towards your SIP, to create an easier investment experience for you.</string>
+    <string name="upload_scanned_form">Upload Scanned Mandate</string>
+    <string name="upload_scanned_form_description">Once you have filled out the bank mandate form, please scan the form and upload it.</string>
 
 </resources>
